--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <div class="wrapper">
+    <section class="wrapper">
 
         <!-- /* header = вид всього першого екрану */ -->
         <header class="header">
@@ -43,36 +43,40 @@
         <!-- /* header = вид всього першого екрану */ -->
 
 
-
         <main class="main">
             <div class="container">
+
+                <!-- block-1 -->
                 <div class="top-img-absolute">
                     <img src="img/Rectangle_yellow-rectangle.png" alt="yellow-rectangle"></img>
                 </div>
-                <section class="top__info">
-                    <div class="top__block">
-                        <div class="top__info-bay">
-                            <p class="top__vertical-text">More about &nbsp;POTR POTS<span></span></p>
-                            <h1 class="top__title">POTR ~ Eco, self-<span>watering, origami</span> plant
-                                <span>pots</span>
-                            </h1>
-                            <div class="top__wrap-price">
-                                <div class="top__block-price">
-                                    <span class="top__price">$ 7,50</span>
-                                    <p class="top__ofer">Get the second order in half price</p>
+                <div class="block-1__wrapper">
+                    <section class="top__info">
+                        <div class="top__block">
+                            <div class="top__info-bay">
+                                <p class="top__vertical-text">More about &nbsp;POTR POTS<span></span></p>
+                                <h1 class="top__title">POTR ~ Eco, self-<span>watering, origami</span> plant
+                                    <span>pots</span>
+                                </h1>
+                                <div class="top__wrap-price">
+                                    <div class="top__block-price">
+                                        <span class="top__price">$ 7,50</span>
+                                        <p class="top__ofer">Get the second order in half price</p>
+                                    </div>
+                                </div>
+                                <div class="top__btn">
+                                    <button class="top__btn-item">Buy now<span></span></button>
                                 </div>
                             </div>
-                            <div class="top__btn">
-                                <button class="top__btn-item">Buy now<span></span></button>
+                            <div class="top__img">
+                                <img src="img/Rectangle_1.png" alt="flowerpot with a cactus">
                             </div>
                         </div>
-                        <div class="top__img">
-                            <img src="img/Rectangle_1.png" alt="flowerpot with a cactus">
-                        </div>
-                    </div>
-                </section>
+                    </section>
+                </div>
+                <!-- block-1 -->
 
-                <!-- /* products */ -->
+                <!-- /* products */ block-2_and_3 -->
                 <section class="products">
                     <div class="product__block">
                         <div class="product__vertical-text"><span></span>potr pots</div>
@@ -130,9 +134,9 @@
 
                     </div>
                 </section>
-                <!-- /* products */ -->
+                <!-- /* products */ block-2_and_3 -->
 
-                <!-- /* block 3 img */ -->
+                <!-- /* block 3 img */ block-4 -->
                 <section class="features">
                     <h3 class="features__title">POTR Pots <span>Features</span></h3>
                     <div class="features__content">
@@ -144,21 +148,22 @@
                         </div>
                         <div class="features__block">
                             <img class="features__block-img" src="img/block-2.png" alt="розібраний вазон">
-                            <h6 class="features__block-title">Flat pack postage</h6>
-                            <p class="features__block-text">The pots will be shipped flat packed so they can be slipped
-                                through your letter box</p>
+                            <h6 class="features__block-title">Easy assembly</h6>
+                            <p class="features__block-text">POTR Pots are super easy (and super satisfying) to assemble
+                                using the quick draw cotton cord</p>
                         </div>
                         <div class="features__block">
                             <img class="features__block-img" src="img/block-3.png" alt="flowerpot with self-watering">
-                            <h6 class="features__block-title">Flat pack postage</h6>
-                            <p class="features__block-text">The pots will be shipped flat packed so they can be slipped
-                                through your letter box</p>
+                            <h6 class="features__block-title">Self-watering</h6>
+                            <p class="features__block-text">Simply add water into the pot — if your plant is thirsty
+                                it will automatically start drinking the water through the
+                                cotton cord. Magic!</p>
                         </div>
                     </div>
                 </section>
-                <!-- /* //block 3 img */ -->
+                <!-- /* //block 3 img */ block-4 -->
 
-                <!-- /* team! */ -->
+                <!-- /* team! */ block-5 -->
                 <section class="team">
                     <h4 class="team__title">Meet the POTR team!</h4>
                     <div class="team__content">
@@ -184,10 +189,10 @@
                         <p class="team__lowercase-absolute-title">And<span>y</span></p>
                     </div>
                 </section>
-                <!-- /* team! */ -->
+                <!-- /* team! */ block-5 -->
             </div>
 
-            <!-- /* Materials and Features */ -->
+            <!-- /* Materials and Features */ block-6 -->
             <section class="special">
                 <div class="special__block">
                     <h2 class="special__main-title">Materials and Features</h2>
@@ -238,9 +243,119 @@
                     </div>
                 </div>
             </section>
-            <!-- /* Materials and Features */ -->
+            <!-- /* Materials and Features */ block-6 -->
 
+            <div class="container">
+                <!-- Which size POTR block-7 -->
+                <section class="block-7">
+                    <div class="block-7__wrapper">
+                        <h2 class="block-7__title">Which size POTR for my house plant ?</h2>
+                        <div class="block-7__wrap">
+                            <div class="block-7__column">
+                                <div class="column__col">
+                                    <p>Pre potted plants come in fairly standard sized pots, and can be classified into
+                                        one
+                                        of two categories:
+                                    </p>
 
+                                    <div class="column__col-2">
+                                        <div class="column__wrap">
+                                            <div class="column__subtitle">large</div>
+                                            <p class="column__text">
+                                                Large POTR Pot = 14cm diameter (1.5 litre) house plant pot or less
+                                            </p>
+                                        </div>
+
+                                        <div class="column__wrap">
+                                            <div class="column__subtitle">Small</div>
+                                            <p class="column__text">
+                                                Small POTR Pot = 10cm diameter (0.49 litre) house plant pot or less
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <p class="block-7__text-bottom">
+                                    * POTR Pots have a little bit of give around the top rim so can fit slightly
+                                    &nbsp;&nbsp;&nbsp;larger sizes than the recommended sizes stated above if necessary.
+                                </p>
+                            </div>
+                            <div class="block-7__column">
+                                <img class="column__img" src="img/block-7.png" alt="Which size POTR">
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- Which size POTR block-7 -->
+
+                <!-- block-8 -->
+                <section class="bloc-8">
+                    <div class="bloc-8__wrapper">
+                        <div class="bloc-8__col">
+                            <img class="col__img" src="img/block-8.png" alt="picture grid">
+                        </div>
+                    </div>
+                    <div class="bloc-8__col">
+                        <div class="col__wrap">
+                            <div class="col__row-first">
+                                <div class="col__row-block">
+                                    <h2 class="col__row-title"><span></span>Easy assembly</h2>
+                                    <p class="col__row-text">Pull the draw string to assemble!</p>
+                                </div>
+                                <div class="col__row-block">
+                                    <h2 class="col__row-title"><span></span>Flat pack postage</h2>
+                                    <p class="col__row-text">POTR pots arrive flat packed in an envelope!</p>
+                                </div>
+                            </div>
+                            <div class="col__row-second">
+                                <h2 class="col__row-title"><span></span>Self-watering</h2>
+                                <p class="col__row-text">Add water to POTR and watch your plant drink!</p>
+                            </div>
+                            <div class="col__row-btn">
+                                <button><span class="btn__text">Buy now </span><span></span></button>
+                            </div>
+                            <div class="col__row-sail">
+                                <div class="row__sail-wrap">
+                                    <h2 class="row__sail-title">50% off</h2>
+                                    <h3 class="row__sail-subtitle">Get the second order in half price</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- block-8 -->
+
+                <!-- bloxk-9 -->
+                <section class="block-9">
+                    <div class="block-9__wrapper">
+                        <div class="block-9__column">
+                            <div class="block-9__column-col">
+                                <div class="block-9__absolute">
+                                    <img class="yellow-square" src="img/9-square.png" alt="yellow square">
+                                    <img class="yellow-print" src="img/9-seal.png" alt="seal">
+                                </div>
+                                <h2 class="column__col-title">have any questions?</h2>
+                                <div class="column__col-subtitle">Here few ways to get in touch with us:</div>
+                                <h4 lass="column__col-message">Message us</h4>
+                                <form class="column__col-form" action="">
+                                    <label for="name" >Name</label>
+                                    <input type="text" id="name" name="name">
+                                    <label for="email">Email</label>
+                                    <input type="text" id="email" name="email">
+                                    <textarea name="" id="massage" cols="30" rows="10">Massage</textarea>
+                                    <!-- <label for="massage">Massage</label> -->
+                                    <!-- <input type="text" id="massage" name="massage"> -->
+                                    <input type="submit" value="Submit">
+                                </form>
+                            </div>
+                            <div class="column__col-info">
+                                <div class="col-info__phone">Our phone</div>
+
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- bloxk-9 -->
+            </div>
         </main>
 
 
@@ -270,10 +385,10 @@
             </div>
         </footer>
 
-    </div>
+        </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-    <script src="js/script.js"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+        <script src="js/script.js"></script>
 </body>
 
 </html>
